/*
  Localizable.strings
  CybridSDK

  Created by Cybrid on 7/07/22.

*/

// Crypto Price List
"cybrid.cryptoPriceList.headerSearchPlaceholder" = "Search";
"cybrid.cryptoPriceList.headerCurrency" = "Currency";
"cybrid.cryptoPriceList.headerPrice" = "Price";

// Trade Buy
"cybrid.trade.buy.title" = "BUY";
"cybrid.trade.buy.currency" = "Currency";
"cybrid.trade.buy.selectCurrency" = "Select Currency";
"cybrid.trade.buy.amount" = "Amount";
"cybrid.trade.buy.cta" = "Buy";

// Trade Sell
"cybrid.trade.sell.title" = "SELL";
"cybrid.trade.sell.cta" = "Sell";

// Trade Confirmation Modal
"cybrid.trade.confirmationModal.title" = "Order Quote";
"cybrid.trade.confirmationModal.subtitle" = "Prices are in realtime. Rates automatically refresh.";
"cybrid.trade.confirmationModal.purchaseAmount" = "Purchase amount";
"cybrid.trade.confirmationModal.purchaseQuantity" = "Purchase quantity";
"cybrid.trade.confirmationModal.sellAmount" = "Sell amount";
"cybrid.trade.confirmationModal.sellQuantity" = "Sell quantity";
"cybrid.trade.confirmationModal.transactionFee" = "Transaction Fee";
"cybrid.trade.confirmationModal.confirm" = "Confirm";
"cybrid.trade.confirmationModal.cancel" = "Cancel";

// Trade Loading Modal
"cybrid.trade.loadingModal.processingMessage" = "Submitting Crypto Order";

// Trade Success Modal
"cybrid.trade.successModal.title" = "Order submitted";
"cybrid.trade.successModal.subtitle" = "Your order has been placed";
"cybrid.trade.successModal.transactionId" = "Transaction ID:";
"cybrid.trade.successModal.date" = "Date:";
"cybrid.trade.successModal.purchaseAmount" = "Purchase amount";
"cybrid.trade.successModal.purchaseQuantity" = "Purchase quantity";
"cybrid.trade.successModal.sellAmount" = "Sell amount";
"cybrid.trade.successModal.sellQuantity" = "Sell quantity";
"cybrid.trade.successModal.transactionFee" = "Transaction Fee";
"cybrid.trade.successModal.buyMore" = "Buy more crypto";
"cybrid.trade.successModal.sellMore" = "Sell more crypto";

// Accounts
"cybrid.accounts.accountComponentTitle" = "Account Value";
"cybrid.accounts.assetTitle" = "ASSET";
"cybrid.accounts.marketPriceTitle" = "Market Price";
"cybrid.accounts.balanceTitle" = "BALANCE";

// Account Trades
"cybrid.account.trades.recentTransactionsTitle" = "RECENT TRANSACTIONS";
"cybrid.account.trades.amountTitle" = "AMOUNT";
"cybrid.account.trades.sellType" = "Sell";
"cybrid.account.trades.buyType" = "Buy";

// Account Trade Detail - Modal
"cybrid.account.trade.detail.bought" = "Buy";
"cybrid.account.trade.detail.sold" = "Sell";
"cybrid.account.trade.detail.status" = "Status";
"cybrid.account.trade.detail.orderPlaced" = "Order Placed";
"cybrid.account.trade.detail.orderFinalized" = "Order Finalized";
"cybrid.account.trade.detail.transactionDate" = "Transaction Date & Time";
"cybrid.account.trade.detail.accountID" = "Account ID";
"cybrid.account.trade.detail.orderID" = "Order ID";
"cybrid.account.trade.detail.close" = "Close";

// KYC - Identity Verification Component
"cybrid.kyc.loading.text" = "Checking Identity...";
"cybrid.kyc.required.text" = "Begin identity verification.";
"cybrid.kyc.required.cancel" = "Cancel";
"cybrid.kyc.required.begin" = "Begin";
"cybrid.kyc.verified.text" = "You have been verified!";
"cybrid.kyc.verified.done" = "Done";
"cybrid.kyc.error.text" = "Unable to verify identity.";
"cybrid.kyc.error.done" = "Done";
"cybrid.kyc.reviewing.text" = "Identity being reviewed.";
"cybrid.kyc.reviewing.done" = "Done";

// Bank Accounts Component
"cybrid.bank.accounts.loading.text" = "Checking Bank Accounts";
"cybrid.bank.accounts.required.text" = "No banks accounts connected.";
"cybrid.bank.accounts.required.button.text" = "Add account";
"cybrid.bank.accounts.done.text" = "Account added successfully.";
"cybrid.bank.accounts.done.button.text" = "Continue";
"cybrid.bank.accounts.error.text" = "An error has occurred, try again.";
"cybrid.bank.accounts.error.button.text" = "Done";
